--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Projet_POO)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Projet_POO main.cpp Ingredient.hpp Gateau.hpp Chou.hpp Tarte.hpp Patisserie.hpp Ingredient.cpp Gateau.cpp Chou.cpp Tarte.cpp Patisserie.cpp InterfaceUtilisateur.cpp Commande.hpp)
+add_executable(Projet_POO main.cpp Ingredient.hpp Gateau.hpp Patisserie.hpp Ingredient.cpp Gateau.cpp Patisserie.cpp InterfaceUtilisateur.cpp Commande.hpp)
